--- a/Playbooks/ansible/passwordless.yml
+++ b/Playbooks/ansible/passwordless.yml
@@ -4,7 +4,7 @@
     gather_facts: no
     tasks:
       - name: Create key pair in pg-primary and pg-standby
-        #become: true  
+        #become: true test 
         become_user: postgres
         file:
           path: /var/lib/postgresql/.ssh
